--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,17 @@
 
 form {
     display:flex;
+    flex-flow: column nowrap;
+}
+
+.names, .info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin: 3rem;
+}
+
+label {
+    margin-bottom: 3px;
+
 }
