--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,42 @@
-/* * {border: 2px solid red} */
+@font-face {
+    font-family: "Norse";
+    src: url("signup-page/fonts/Norse-Bold.otf")
+}
+
+* {
+    font-family: "Norse", 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:
+}
+
+
+body {
+    margin: 0;
+    background-color: #eeeeee;
+}
 
 
 
+header>div {
 
-
-header > div {
-    
     background-color: #292929da;
     background-image: url("images/s-well-oj0zeY2Ltk4-unsplash.jpg");
     /* background-repeat: no-repeat; */
+    background-attachment: fixed;
     background-size: 100vw;
     height: 50vh;
     max-height: calc(100vw * 0.66);
     width: 100vw;
     color: white;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #overlay {
-    position:absolute;
-    left: 1rem;
+
+    left: auto;
+    right: auto;
     top: 0;
     height: 50vh;
     max-height: inherit;
@@ -38,22 +55,26 @@ h1 {
     font-size: 1.5rem;
     text-align: center;
 }
+
 #overlay img {
-    width: 3rem;;
-    height:auto;
+    width: 3rem;
+    ;
+    height: auto;
 
 }
 
 form {
-    display:flex;
+    display: flex;
     flex-flow: column nowrap;
 }
 
-.names, .info {
+.names,
+.info {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     margin: 3rem;
+    margin-top: 0;
 }
 
 label {
@@ -62,5 +83,65 @@ label {
 }
 
 #main {
-    background-color: white;;
+    background-color: white;
+    ;
 }
+
+h4 {
+    margin: 2rem;
+    border: 1px solid #808080;
+    border-radius: 4px;
+    padding: 1rem;
+    background-color: whitesmoke;
+    color: #303030;
+}
+
+.main {
+    background-color: whitesmoke;
+    color: #303030;
+    display: flex;
+    flex-direction: column;
+}
+
+.main h3 {
+    align-self: center;
+}
+
+#shaded div {
+    border: 1px solid #808080;
+    border-radius: 4px;
+    padding: 1rem;
+    margin: 2rem;
+    
+}
+
+
+
+form {
+    background-color: white;
+}
+
+div #button {
+    background-color: whitesmoke;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+button {
+    padding: 1rem;
+    background-color: #44a5a8;
+    color: white;
+    font-weight: 700;
+    font-size: larger;
+    border-radius: 8px;
+    margin: 2rem;
+}
+
+#shaded {
+    box-shadow:2px 4px 8px 4px  gray;
+    z-index: 10;
+    /* margin-bottom: 2rem; */
+}
+/* struggling to get the shadow to appear over the button div... */
