--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,14 @@ h1 {
     text-align: center;
 }
 
+h4 p {
+    color: #404040;
+    letter-spacing: 1px;
+}
+
+h3 {
+    text-align: center;
+}
 #overlay img {
     width: 3rem;
     ;
