--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: "Norse";
-    src: url("signup-page/fonts/Norse-Bold.otf") format("opentype");
+    src: url("./fonts/Norse-Bold.otf") format("opentype");
 }
 
 * {
-    font-family: "Norse", 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -65,6 +65,7 @@ header>div {
 h1 {
     font-size: 1.5rem;
     text-align: center;
+    font-family: "Norse";
 }
 
 h4 p {
@@ -108,7 +109,10 @@ label {
 
 input {
     border: 1px solid #808080;
-    font-size: 1.1em;
+    font-size: 1.1em;    
+}
+input:invalid {
+    border: 2px solid red;
 }
 
 #main {
@@ -142,8 +146,6 @@ h4 {
     margin: 2rem;
     
 }
-
-
 
 form {
     background-color: white;
@@ -183,12 +185,9 @@ input:hover {
 #shaded {
     box-shadow:2px 4px 8px 4px  gray;
     z-index: 10;
-    /* margin-bottom: 2rem; */
 }
-/* struggling to get the shadow to appear over the button div... */
 
 @media only screen and (min-width: 700px) {
-    /* * {border: 2px solid red;} */
     #overlay h1 {
         font-size: 2.4em;
     }
@@ -212,12 +211,17 @@ input:hover {
         justify-content: center;
         position: relative;
         padding-top: 3rem;
+        margin-left: 10vw;
+        margin-right: 10vw;
+        border-radius: 10px;
     }
 
     #shaded h3 {
         position: absolute;
         top: 10px;
     }
+
+
 
 
 }
